--- a/news-app/src/App.css
+++ b/news-app/src/App.css
@@ -9,8 +9,21 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    /* animation: App-logo-spin infinite 20s linear; */
   }
+}
+
+header {
+  background-color: #EFEFEF;
+}
+
+header .img {
+  width: 100px; 
+  height: auto
+}
+
+nav {
+  background-color: #d6d6d6;
 }
 
 .App-header {
@@ -21,7 +34,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: #F2ED01; */
+  color: #d6d6d6
 }
 
 .App-link {
@@ -36,3 +50,4 @@
     transform: rotate(360deg);
   }
 }
+
